[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ToyotaHilux97/hilx97.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Scripts/Car_2.gd" type="Script" id=2]
[ext_resource path="res://Audio/carcrashsoundeefect.wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]

[node name="Car_2" type="VehicleBody"]
collision_layer = 2
collision_mask = 2
mass = 2.16
gravity_scale = 0.2
script = ExtResource( 2 )

[node name="hilx97" type="MeshInstance" parent="."]
transform = Transform( -0.009, 0, -7.86805e-10, 0, 0.009, 0, 7.86805e-10, 0, -0.009, 0, -0.456, -1.68508 )
mesh = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.60064, 0, 0, 0, 0.547042, 0, 0, 0, 1.56006, 0, 0.223905, -0.290234 )
shape = SubResource( 1 )

[node name="Area_Car_2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1.21094, 0, 0, 0, 1.00804, 0, 0, -0.513935 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area_Car_2"]
transform = Transform( 0.682629, 0, 0, 0, 0.55197, 0, 0, 0, 1.56623, 0, 0.131114, 0.220819 )
shape = SubResource( 2 )

[node name="Car_crash_sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.826562, 0 )
stream = ExtResource( 3 )
unit_db = 1.0
unit_size = 8.0

[node name="Live" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Area_Car_2" to="." method="_on_Area_Car_2_body_entered"]
[connection signal="timeout" from="Live" to="." method="_on_Live_timeout"]
